--- a/web/index.html
+++ b/web/index.html
@@ -1,20 +1,232 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>NetHack Webtiles</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script>
-        <script src="./core.js"></script>
-    </head>
+<head>
+    <title>NetHack Live</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script>
+    <script type="module" src="js/core.js"></script>
+    <link rel="stylesheet" href="css/default.css">
+</head>
 
-    <body>
-		<h1>NetHack Webtiles</h1>
-		<h3 id="key-ui"></h3>
-	<div id="msg-ui">
+<body class="ui-darkgray">
 
-	</div>
-	<div id="tile-ui">
+<!-- Top Menu1 -->
+<nav id="top-menu1" class="navbar navbar-dark fixed-top navbar-expand-md ui-darkblue" data-offset-top="80"
+     data-spy="affix">
+    <div class="container">
+        <!-- Logo  -->
+        <a class="navbar-brand" href="/">NetHack Live</a>
+        <div id="top-navbar">
+            <ul class="nav navbar-nav ml-auto">
+                <!-- User Account Info -->
+                <li class="nav-item"><a id="account-info" href="#" class="nav-link"></a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- Top Menu2 -->
+<div id="top-menu2" class="navbar navbar-light fixed-top fixed-element navbar-expand-md ui-gray"
+     data-offset-top="80" data-spy="affix">
+    <div class="container">
 
-	</div>
-    </body>
+        <button type="button" class="navbar-toggler" data-toggle="collapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="nav-item"><a href="/" class="nav-link">Lobby</a></li>
+                <!-- Play Dropdown Menu -->
+                <li class="divider-vertical nav-item"></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Play</a>
+                    <div id="play-list-div" class="dropdown-menu">
+                    </div>
+                </li>
+
+                <!-- EDIT RC Dropdown Menu -->
+                <li class="divider-vertical nav-item"></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Edit RC</a>
+                    <div id="edit-rc-list-div" class="dropdown-menu">
+                    </div>
+                </li>
+            </ul>
+
+            <!-- Login / Register Menu -->
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item">
+                    <div class="input-group input-group-sm">
+                        <form action="#" id="login-form" style="display:flex" method="get">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroup-sizing-sm1">ID</span>
+                            </div>
+                            <input type="text" name="username" class="form-control">
+
+                            <div class="lr-margin2d5"></div>
+
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputGroup-sizing-sm2">PW</span>
+                            </div>
+                            <input type="password" name="password" class="form-control">
+
+                            <div class="lr-margin2d5"></div>
+
+                            <button class="btn btn-sm btn-success" type="submit">Login</button>
+
+                            <div class="lr-margin2d5"></div>
+                        </form>
+                        <button id="register-btn" class="btn btn-sm btn-info">Register</button>
+                        <div class="lr-margin2d5"></div>
+                        <button id="logout-btn" class="btn btn-sm btn-dark" style="display: none;">Logout</button>
+                    </div>
+                </li>
+            </ul>
+
+
+        </div>
+    </div>
+</div>
+
+<div id="main-content" class="container">
+    <table id="player-list" class="table table-bordered">
+        <thead>
+        <tr class="ui-darkblue">
+            <th scope="col">Username</th>
+            <th scope="col">Game</th>
+            <th scope="col">Start date & time</th>
+            <th scope="col">Specs</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+            <td>1</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="modal ui-gray" id="register-modal" tabindex="-1" role="dialog">
+    <div class="row justify-content-center">
+        <div class="col-md-8 flex-ratio-40">
+            <div class="card">
+                <div class="card-header">Register</div>
+                <!-- 향후 삭제 예정 -->
+                <span style="margin: 20px">WARNING!!!<br>향후 적용할 dgamelaunch(Telnet, SSH 플레이)와의 호환성을 위해 비밀번호를 암호화하지 않고 서버에 날 것 그대로 저장합니다. 민감한 비밀번호를 쓰지마세요! (추후 dgamelaunch를 지원하게 되면 기존 비밀번호는 암호화 처리하고 이후 가입자의 비밀번호도 암호화 처리 될 예정입니다)</span>
+                <div class="card-body">
+                    <!-- Registration Form-->
+                    <form id="register-form" class="form-horizontal" action="#">
+                        <div class="form-group">
+                            <label for="username" class="cols-sm-2 control-label">Username (ID)</label>
+                            <div class="cols-sm-10">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-users fa"></i></span>
+                                    <input type="text" class="form-control" name="username" id="username"
+                                           placeholder="Enter your Username"/>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password" class="cols-sm-2 control-label">Password</label>
+                            <div class="cols-sm-10">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-lock fa-lg"></i></span>
+                                    <input type="password" class="form-control" name="password" id="password"
+                                           placeholder="Enter your Password"/>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
+                            <div class="cols-sm-10">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-lock fa-lg"></i></span>
+                                    <input type="password" class="form-control" name="confirm" id="confirm"
+                                           placeholder="Confirm your Password"/>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email" class="cols-sm-2 control-label">Your Email</label>
+                            <div class="cols-sm-10">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-envelope fa"></i></span>
+                                    <input type="text" class="form-control" name="email" id="email"
+                                           placeholder="Enter your Email"/>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-lg btn-block login-button" type="submit">Register
+                            </button>
+                        </div>
+                    </form>
+                    <div class="form-group">
+                        <button id="close-register-btn" class="btn btn-danger btn-lg btn-block">Close
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal ui-gray" id="edit-rc-modal" tabindex="-1" role="dialog">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header"><span id="edit-rc-title">Edit RC</span></div>
+                <div class="card-body">
+                    <div class="form-group">
+                        <textarea class="form-control" id="edit-rc-text" rows="20"></textarea>
+                        <div class="tb-margin2d5"></div>
+                        <button id="save-edit-rc-btn" class="btn btn-success btn-lg btn-block">Save</button>
+                        <button id="close-edit-rc-btn" class="btn btn-danger btn-lg btn-block">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+</body>
+
+
+<!--<h1>NetHack Webtiles</h1>
+<h3 id="key-ui"></h3>
+<div id="msg-ui">
+</div>
+<div id="status-ui" style="float: left; margin-top: 0px;">
+    <h3 id="hp-level" style="color:red;background-color:black;"></h3>
+    <h3 id="dungeon-level" style="color:greenyellow;background-color:black;"></h3>
+    <h3 id="hungry-level" style="color:yellow;background-color:black;"></h3>
+</div>
+<div id="tile-ui">
+</div>-->
+
+
 </html>
