--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script>
     <script type="module" src="js/core.js"></script>
     <link rel="stylesheet" href="css/default.css">
@@ -89,39 +90,21 @@
         </div>
     </div>
 </div>
-
 <div id="main-content" class="container">
-    <table id="player-list" class="table table-bordered">
+    <table id="game-list" class="table table-bordered" style="display: none;">
         <thead>
         <tr class="ui-darkblue">
-            <th scope="col">Username</th>
-            <th scope="col">Game</th>
-            <th scope="col">Start date & time</th>
-            <th scope="col">Specs</th>
+            <th style="width: 20%" scope="col">Username</th>
+            <th style="width: 20%" scope="col">Game</th>
+            <th style="width: 50%" scope="col">Start date & time</th>
+            <th style="width:  5%" scope="col">Specs</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>1</td>
-        </tr>
-        <tr>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-            <td>1</td>
-        </tr>
         </tbody>
     </table>
 </div>
+
 
 <div class="modal ui-gray" id="register-modal" tabindex="-1" role="dialog">
     <div class="row justify-content-center">
@@ -212,9 +195,103 @@
     </div>
 </div>
 
-
+<div id="loading" style="display: none;">
+    <div>
+        <p id="loading-text" class="ui-darkblue"></p>
+        <img src="/decoration/archaeologist.png" style="display: none; max-width: 500px;">
+        <img src="/decoration/rodney.png" style="display: none; max-width: 500px;">
+        <img src="/decoration/valkyrie.png" style="display: none; max-width: 400px;">
+        <img src="/decoration/communion.png" style="display: none; max-width: 500px;">
+        <img src="/decoration/nethack-logo.jpg" style="display: none; max-width: 500px;">
+        <img src="/decoration/player-in-cave.jpg" style="display: none; max-width: 500px;">
+        <img src="/decoration/welcome-to-death-war.jpg" style="display: none; max-width: 500px;">
+        <img src="/decoration/tourist.png" style="display: none; max-width: 700px;">
+        <img src="/decoration/jackal.png" style="display: none; max-width: 500px;">
+    </div>
+</div>
 </body>
 
+
+<div id="game-content">
+    <div id="tile-content"></div>
+    <div id="browserhack-status"></div>
+    <div id="message-content"></div>
+    <div id="item-content" class="alert alert-info" style="position: fixed; top:0; display: none;" role="alert"></div>
+</div>
+<div id="chat" style="" class="focus-trap">
+    <a href="javascript:" id="chat_caption">
+<!--        <span id="spectator_count">1 spectators</span>-->
+        <span id="message_count">(Esc: back to game, Quotes('): go to chat)</span>
+    </a>
+    <span id="spectator_list"><!--<a href="http://crawl.akrasiac.org/scoring/players/asciiphilia.html"
+                                         target="_blank" class="player">ASCIIPhilia</a>, <a
+                    href="http://crawl.akrasiac.org/scoring/players/beem.html" target="_blank" class="watcher">beem</a></span>-->
+            <div id="chat_history_container">
+                <span id="chat_history"><!--<span class="chat_sender">ASCIIPhilia</span>: <span class="chat_msg">asdf</span><br><span
+                        class="chat_sender">ASCIIPhilia</span>: <span class="chat_msg">asdf</span><br><span
+                        class="chat_sender">ASCIIPhilia</span>: <span class="chat_msg">asdf</span><br><span
+                        class="chat_sender">ASCIIPhilia</span>: <span class="chat_msg">asdf</span><br><span
+                        class="chat_sender">ASCIIPhilia</span>: <span class="chat_msg">asfd</span><br><span
+                        class="chat_sender">ASCIIPhilia</span>: <span class="chat_msg">asdf</span><br></span>-->
+
+                </span>
+            </div>
+            <input class="text" type="text" name="chat_input" id="chat_input" style="">
+            <div id="chat_login_text" style="display: none;">
+                <a id="chat_login_link" href="javascript:">Login</a> to chat
+            </div>
+        <!--$("#chat_body").append('<embed height="80" width="100%" src="http://www.gagalive.kr/gagalive.swf?chatroom=%7E%7E%7Estonesoup%21&bgcolor=000&fontcolor=white"></embed>
+        &user=None
+        ')-->
+        <!-- 공용인데 플레이어는 채팅이랑 플레이용 키보드 입력이 중복되서 안됨 -->
+            <style>
+                #chat_public {
+                    height: 80px;
+                    overflow-y: hidden;
+                    margin-top: 3px;
+                }
+
+                #chat_public.hidden {
+                    height: 0px;
+                }
+
+                #chat_public.single {
+                    height: 30px;
+                }
+
+                #chat_public_control {
+                    width: 394px;
+                }
+
+                #chat_public_control a {
+                    cursor: pointer;
+                }
+
+                #gagalive {
+                    height: 115px;
+                    width: 394px;
+                    margin-top: -35px;
+                }
+
+                #chat_public.single #gagalive {
+                    height: 115px;
+                    width: 394px;
+                    margin-top: -53px;
+                }
+            </style>
+            <script>
+                function redrawPublicChat() {
+//$("#chat_public").html('<embed id="gagalive" height="115" width="394" src="http://www.gagalive.kr/gagalive.swf?chatroom=%7E%7E%7Estonesoup%21&bgcolor=000&fontcolor=white&user='+printName()+'">');
+                }
+            </script>
+        <!--<div id="chat_public_control"><a onclick="javascript:loadCookie();">[Enable Webtiles Additional Function
+            Module]</a></div>-->
+            <div id="chat_public" class="hidden">
+                <!--
+                <embed id="gagalive" height="115" width="394" src="http://www.gagalive.kr/gagalive.swf?chatroom=%7E%7E%7Estonesoup%21&bgcolor=000&fontcolor=white&user=None"></embed>
+                -->
+            </div>
+</div>
 
 <!--<h1>NetHack Webtiles</h1>
 <h3 id="key-ui"></h3>
