add archive-link button

--- a/web/index.html
+++ b/web/index.html
@@ -58,6 +58,7 @@
                     <div id="edit-rc-list-div" class="dropdown-menu">
                     </div>
                 </li>
+                <li class="nav-item"><a id="archive-link" href="/" class="nav-link">Archive</a></li>
             </ul>
 
             <!-- Login / Register Menu -->
