Add homunculus at title.
.

--- a/web/index.html
+++ b/web/index.html
@@ -212,6 +212,7 @@
         <img src="/decoration/welcome-to-death-war.jpg" style="display: none; max-width: 500px;">
         <img src="/decoration/tourist.png" style="display: none; max-width: 700px;">
         <img src="/decoration/jackal.png" style="display: none; max-width: 500px;">
+        <img src="/decoration/homunculus.png" style="display: none; max-width: 600px;">
     </div>
 </div>
 </body>
