--- a/web/index.html
+++ b/web/index.html
@@ -213,6 +213,7 @@
         <img src="/decoration/tourist.png" style="display: none; max-width: 700px;">
         <img src="/decoration/jackal.png" style="display: none; max-width: 500px;">
         <img src="/decoration/homunculus.png" style="display: none; max-width: 500px;">
+        <img src="/decoration/gompami-tourist.png" style="display: none; max-width: 900px;"> 
     </div>
 </div>
 </body>
