--- a/web/index.html
+++ b/web/index.html
@@ -213,17 +213,17 @@
         <img src="/decoration/tourist.png" style="display: none; max-width: 700px;">
         <img src="/decoration/jackal.png" style="display: none; max-width: 500px;">
         <img src="/decoration/homunculus.png" style="display: none; max-width: 500px;">
-        <img src="/decoration/gompami-tourist.png" style="display: none; max-width: 900px;"> 
+        <img src="/decoration/gompami-tourist.png" style="display: none; max-width: 700px;">
     </div>
 </div>
 </body>
 
 
 <div id="game-content">
-    <div id="tile-content"></div>
-    <div id="browserhack-status"></div>
-    <div id="terminal-content"></div>
+    <div id="status-content"><div id="browserhack-status"></div></div>
     <div id="message-content"></div>
+    <div id="tile-content"></div>
+    <div id="terminal-content"></div>
     <div id="item-content" class="alert alert-info" role="alert"></div>
 </div>
 <div id="chat" style="" class="focus-trap">
