Add large text popup (#14)
* added popup

* seperated html/js/css

--- a/web/index.html
+++ b/web/index.html
@@ -252,4 +252,33 @@
     </div>
 </div>
 
+<!-- ui-popup div 시작 -->
+<div class="ui-popup" id="ui-popup" style="display: none;" data-generation-id="4">
+  <div class="ui-popup-overlay"></div>
+  <div class="ui-popup-outer" >
+     <div class="ui-popup-inner">
+        <div class="formatted-scroller" data-tag="help">
+           <div class="body fg7" data-simplebar="init">
+              <div class="simplebar-track vertical" style="visibility: hidden;">
+                 <div class="simplebar-scrollbar visible"></div>
+              </div>
+              <div class="simplebar-track horizontal" style="visibility: visible;">
+                 <div class="simplebar-scrollbar visible" style="width: 25px; transform: translate3d(0px, 0px, 0px);"></div>
+              </div>
+              <div class="simplebar-scroll-content" style="padding-right: 35px; padding-bottom: 100px;">
+                      <div id="popup-content">
+                        <!-- 본문내용 -->
+                       </div>
+                     </div>
+                 </div>
+              </div>
+              <div class="scroller-shade top" style="opacity: 0;"></div>
+              <div class="scroller-shade bot" style="opacity: 0.0375;"></div>
+              <span class="scroller-lhd"></span>
+           </div>
+           <div class="more"></div>
+        </div>
+     </div>
+     <!-- ui-popup div 끝 -->
+
 </html>
