add large text data extraction (temporary)

--- a/web/index.html
+++ b/web/index.html
@@ -265,8 +265,8 @@
               <div class="simplebar-track horizontal" style="visibility: visible;">
                  <div class="simplebar-scrollbar visible" style="width: 25px; transform: translate3d(0px, 0px, 0px);"></div>
               </div>
-              <div class="simplebar-scroll-content" style="padding-right: 35px; padding-bottom: 100px;">
-                      <div id="popup-content">
+              <div class="simplebar-scroll-content" style="padding-right: 35px; padding-bottom: 100px; ">
+                      <div id="popup-content" style="white-space: pre;">
                         <!-- 본문내용 -->
                        </div>
                      </div>
