add crop phaser module

--- a/web/index.html
+++ b/web/index.html
@@ -226,6 +226,9 @@
         <div id="tile-content">
 
         </div>
+        <div id="crop-content" style="display: none">
+
+        </div>
     </div>
     <div id="status-content"><div id="browserhack-status"></div></div>
     <div id="terminal-content"></div>
