fixed menu create

--- a/web/index.html
+++ b/web/index.html
@@ -302,7 +302,7 @@
       </div>
       <div class="simplebar-scroll-content">
         <div id="popup-content">
-          <div class="menu" id="menu" style="margin-top: 100%">
+          <div class="menu" id="menu">
             <!-- json으로 받은 항목들 여기에 생성 -->
           </div>
         </div>
