add latency monitor ui

--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
             <ul class="nav navbar-nav ml-auto">
                 <!-- User Account Info -->
                 <li class="nav-item"><a id="account-info" href="#" class="nav-link"></a></li>
+                <li class="nav-item"><a id="latency-info" title="This is the server response time. This can be affected by the server and your location. 1~10MS = Excellent, 11~50MS = Good, 51~100 = Fair, 101MS~ = Bad. " href="#" class="nav-link"></a></li>
             </ul>
         </div>
     </div>
