Add web item menu (#23)
* Added Item Menu

* delete history

* fixed menu create

--- a/web/index.html
+++ b/web/index.html
@@ -282,4 +282,38 @@
      </div>
      <!-- ui-popup div 끝 -->
 
+       <!-- ui-menu 시작 -->
+  <div
+  class="ui-popup"
+  id="ui-menu"
+  style="display: none"
+  data-generation-id="4"
+>
+  <div class="ui-popup-overlay"></div>
+  <div class="ui-popup-inner">
+    <div class="body fg7" data-simplebar="init">
+      <div class="simplebar-track vertical" style="visibility: hidden">
+        <div class="simplebar-scrollbar visible"></div>
+      </div>
+      <div class="simplebar-track horizontal" style="visibility: visible">
+        <div
+          class="simplebar-scrollbar visible"
+          style="width: 25px; transform: translate3d(0px, 0px, 0px)"
+        ></div>
+      </div>
+      <div class="simplebar-scroll-content">
+        <div id="popup-content">
+          <div class="menu" id="menu">
+            <!-- json으로 받은 항목들 여기에 생성 -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="scroller-shade top" style="opacity: 0"></div>
+    <div class="scroller-shade bot" style="opacity: 0.0375"></div>
+    <span class="scroller-lhd"></span>
+  </div>
+  <div class="more"></div>
+</div>
+<!-- ui-menu 끝 -->
 </html>
