--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/xterm@4.8.1/lib/xterm.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.8.1/css/xterm.css">
     <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.4.0/lib/xterm-addon-fit.min.js"></script>
-
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
     <script type="module" src="js/core.js"></script>
     <link rel="stylesheet" href="css/default.css">
 </head>
@@ -267,7 +267,7 @@
                  <div class="simplebar-scrollbar visible" style="width: 25px; transform: translate3d(0px, 0px, 0px);"></div>
               </div>
               <div class="simplebar-scroll-content" style="padding-right: 35px; padding-bottom: 100px; ">
-                      <div id="popup-content" style="white-space: pre;">
+                      <div class="text-popup-content" style="white-space: pre;">
                         <!-- 본문내용 -->
                        </div>
                      </div>
@@ -302,7 +302,7 @@
         ></div>
       </div>
       <div class="simplebar-scroll-content">
-        <div id="popup-content">
+        <div class="popup-content">
           <div class="menu" id="menu">
             <!-- json으로 받은 항목들 여기에 생성 -->
           </div>
