--- a/web/index.html
+++ b/web/index.html
@@ -228,8 +228,8 @@
 
         </div>
     </div>
-    <div id="status-content"><div id="browserhack-status"></div></div>
-    <div id="terminal-content"></div>
+    <div id="status-content"><div id="browserhack-status"></div><div id="built-in-inventory"></div></div>
+    <div id="terminal-content" style="opacity: 0.7"></div>
     <div id="item-content" class="alert alert-info" role="alert"></div>
 </div>
 <div id="chat" style="" class="focus-trap">
