fix chat toggle button bug

--- a/web/index.html
+++ b/web/index.html
@@ -238,18 +238,19 @@
         <span id="message_count">(Esc: back to game)</span>
     </a>
     <br>
-    <span id="spectator_list"></span>
-    <div id="chat_history_container">
+    <div id="chat_body">
+        <span id="spectator_list"></span>
+        <div id="chat_history_container">
                 <span id="chat_history">
                 </span>
-    </div>
-    <input class="text" type="text" name="chat_input" id="chat_input" style="">
-    <div id="chat_login_text" style="display: none;">
-        <a id="chat_login_link" href="javascript:">Login</a> to chat
-    </div>
+        </div>
+        <input class="text" type="text" name="chat_input" id="chat_input" style="">
+        <div id="chat_login_text" style="display: none;">
+            <a id="chat_login_link" href="javascript:">Login</a> to chat
+        </div>
+        <div id="chat_public" class="hidden">
 
-    <div id="chat_public" class="hidden">
-
+        </div>
     </div>
 </div>
 
