--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>NetHack Live</title>
+    <meta name="viewport" content="user-scalable=no"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -15,7 +16,15 @@
     <link rel="stylesheet" href="css/default.css">
 </head>
 
-<body class="ui-darkgray">
+<body class="ui-darkgray auto-zoom">
+
+<div class="mobile-menu" id="mobile-menu" style="display: none">
+</div>
+<div id="mobile-button-ui" style="display: none;">
+    <!-- json으로 받은 항목들 여기에 생성 -->
+</div>
+
+
 
 <!-- Top Menu1 -->
 <nav id="top-menu1" class="navbar navbar-dark fixed-top navbar-expand-md ui-darkblue" data-offset-top="80"
@@ -199,7 +208,7 @@
     </div>
 </div>
 
-<div id="loading" style="display: none;">
+<div id="loading" style="display: none; position: fixed; width:100%;height:100%;z-index: 999;background: inherit;">
     <div>
         <p id="loading-text" class="ui-darkblue"></p>
         <img src="/decoration/archaeologist.png" style="display: none; max-width: 500px;">
@@ -220,6 +229,12 @@
 
 <div id="game-content">
     <div id="left-content">
+        <div id="mobile-ui"  style="display: none; position: fixed; background:transparent" >
+        <div id="mobile-status">
+        </div>
+        <div id="mobile-message-content"></div>
+        <div id="mobile-chat"></div>
+        </div>
         <div id="message-content"></div>
 
         <div id="tile-content">
@@ -302,9 +317,9 @@
       </div>
       <div class="simplebar-scroll-content">
         <div class="popup-content">
-          <div class="menu" id="menu">
-            <!-- json으로 받은 항목들 여기에 생성 -->
-          </div>
+            <div class="menu" id="menu">
+                <!-- json으로 받은 항목들 여기에 생성 -->
+            </div>
         </div>
       </div>
     </div>
