fix module loading process
To support iOS and some older browsers.
Changed to the method using jquery.

--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.8.1/css/xterm.css">
     <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.4.0/lib/xterm-addon-fit.min.js"></script>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
-    <script type="module" src="js/core.js"></script>
     <script src="js/linkify.js"></script>
+    <script src="js/loader-utils.js"></script>
+    <!--    <script type="module" src="js/loader-native.js"></script>-->
+    <script src="js/loader-jquery.js"></script>
+    <script src="js/core.js"></script>
     <link rel="stylesheet" href="css/default.css">
 </head>
 
