Add small resolution lobby support

--- a/web/index.html
+++ b/web/index.html
@@ -50,12 +50,8 @@
      data-offset-top="80" data-spy="affix">
     <div class="container">
 
-        <button type="button" class="navbar-toggler" data-toggle="collapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+        <div class="navbar-collapse">
+            <ul class="nav navbar-nav navbar1">
                 <li class="nav-item"><a href="/" class="nav-link">Lobby</a></li>
                 <!-- Play Dropdown Menu -->
                 <li class="divider-vertical nav-item"></li>
@@ -76,7 +72,7 @@
             </ul>
 
             <!-- Login / Register Menu -->
-            <ul class="nav navbar-nav ml-auto">
+            <ul class="nav navbar-nav ml-auto navbar2">
                 <li class="nav-item">
                     <div class="input-group input-group-sm">
                         <form action="#" id="login-form" style="display:flex" method="get">
