fix tile-content height bug

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.53.1/dist/phaser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xterm@4.8.1/lib/xterm.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.8.1/css/xterm.css">
     <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.4.0/lib/xterm-addon-fit.min.js"></script>
@@ -236,9 +236,10 @@
         <div id="mobile-chat"></div>
         </div>
         <div id="message-content"></div>
+        <div id="tile-content-wrapper">
+            <div id="tile-content">
 
-        <div id="tile-content">
-
+            </div>
         </div>
     </div>
     <div id="status-content"><div id="browserhack-status"></div><div id="built-in-inventory"></div></div>
