fix register-btn type

--- a/web/index.html
+++ b/web/index.html
@@ -93,7 +93,7 @@
                             <button class="btn btn-sm btn-success" type="submit">Login</button>
 
                             <div class="lr-margin2d5"></div>
-                            <button id="register-btn" class="btn btn-sm btn-info">Register</button>
+                            <button type="button" id="register-btn" class="btn btn-sm btn-info">Register</button>
                         </form>
                         <div class="lr-margin2d5"></div>
                         <button id="logout-btn" class="btn btn-sm btn-dark" style="display: none;">Logout</button>
