fix top-menu1 container style

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
 <!-- Top Menu1 -->
 <nav id="top-menu1" class="navbar navbar-dark fixed-top navbar-expand-md ui-darkblue" data-offset-top="80"
      data-spy="affix">
-    <div class="container">
+    <div class="container" style="align-items: unset">
         <!-- Logo  -->
         <a class="navbar-brand" href="/">NetHack Live</a>
         <div id="top-navbar">
